--- a/Portfolio/vercel.json
+++ b/Portfolio/vercel.json
@@ -4,5 +4,5 @@
     { "src": "public/**/*", "use": "@vercel/static" },
     { "src": "api/**/*", "use": "@vercel/node" }
   ],
-  "routes": [{ "src": "/(.*)", "dest": "../src/index.html" }]
+  "routes": [{ "src": "/(.*)", "dest": "../src/index.jsx" }]
 }
